--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vintage_wheels",
   "version": "0.1.0",
-  "homepage": "https://dariiahacker1.github.io/VintageWheels-Ecommerce"
+  "homepage": "https://dariiahacker1.github.io/VintageWheels-Ecommerce",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
